--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,19 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  audioplayers: ^0.10.0
   cupertino_icons: ^0.1.2
+  flare_flutter: ^1.2.3
+  flutter_icons: ^0.1.3
+  firebase_auth: 0.7.0
+  google_sign_in: 3.2.4
+  provider: ^1.6.1
+  http: ^0.12.0+1
+  meta: ^1.1.6
+  path: ^1.6.2
+  path_provider: ^0.5.0+1
+  scoped_model: ^1.0.1
+  uuid: ^2.0.0
 
 dev_dependencies:
   flutter_test:
@@ -45,6 +57,9 @@ flutter:
   # https://flutter.io/assets-and-images/#resolution-aware.
   # For details regarding adding assets from package dependencies, see
   # https://flutter.io/assets-and-images/#from-packages
+  assets:
+    - assets/flare/Mountain.flr
+
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
@@ -64,3 +79,31 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.io/custom-fonts/#from-packages
+  fonts:
+    - family: Rubik
+      fonts:
+        - asset: assets/fonts/Rubik-Light.ttf
+          weight: 300
+        - asset: assets/fonts/Rubik-LightItalic.ttf
+          style: italic
+          weight: 300
+        - asset: assets/fonts/Rubik-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/Rubik-Italic.ttf
+          style: italic
+          weight: 400
+        - asset: assets/fonts/Rubik-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/Rubik-MediumItalic.ttf
+          style: italic
+          weight: 500
+        - asset: assets/fonts/Rubik-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/Rubik-BoldItalic.ttf
+          style: italic
+          weight: 700
+        - asset: assets/fonts/Rubik-Black.ttf
+          weight: 900
+        - asset: assets/fonts/Rubik-BlackItalic.ttf
+          style: italic
+          weight: 900
