--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   audioplayers: ^0.10.0
+  cloud_firestore: 0.8.2+3
+  cloud_functions: 0.0.5
+  crypto: ^2.0.6
   cupertino_icons: ^0.1.2
   flare_flutter: ^1.2.3
   flutter_icons: ^0.1.3
@@ -34,7 +37,6 @@ dependencies:
   path: ^1.6.2
   path_provider: ^0.5.0+1
   scoped_model: ^1.0.1
-  uuid: ^2.0.0
 
 dev_dependencies:
   flutter_test:
