--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   path: ^1.6.2
   path_provider: ^0.5.0+1
   scoped_model: ^1.0.1
+  wave: ^0.0.8
 
 dev_dependencies:
   flutter_test:
