--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   meta: ^1.1.6
   path: ^1.6.2
   path_provider: ^0.5.0+1
+  rxdart: ^0.21.0
   scoped_model: ^1.0.1
   wave: ^0.0.8
 
