--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,9 +27,10 @@ dependencies:
   cloud_functions: 0.0.5
   crypto: ^2.0.6
   cupertino_icons: ^0.1.2
+  firebase_auth: 0.7.0
   flare_flutter: ^1.2.3
   flutter_icons: ^0.1.3
-  firebase_auth: 0.7.0
+  flutter_launcher_icons: ^0.7.0
   google_sign_in: 3.2.4
   provider: ^1.6.1
   http: ^0.12.0+1
