--- a/.gitignore
+++ b/.gitignore
@@ -64,9 +64,43 @@
 **/ios/ServiceDefinitions.json
 **/ios/Runner/GeneratedPluginRegistrant.*
 
+# Generated icon files
+**/ios/Runner/Assets.xcassets/AppIcon.appiconset/Icon-App-83.5x83.5@2x.png
+**/ios/Runner/Assets.xcassets/AppIcon.appiconset/Icon-App-76x76@2x.png
+**/ios/Runner/Assets.xcassets/AppIcon.appiconset/Icon-App-76x76@1x.png
+**/ios/Runner/Assets.xcassets/AppIcon.appiconset/Icon-App-60x60@3x.png
+**/ios/Runner/Assets.xcassets/AppIcon.appiconset/Icon-App-60x60@2x.png
+**/ios/Runner/Assets.xcassets/AppIcon.appiconset/Icon-App-40x40@3x.png
+**/ios/Runner/Assets.xcassets/AppIcon.appiconset/Icon-App-40x40@2x.png
+**/ios/Runner/Assets.xcassets/AppIcon.appiconset/Icon-App-40x40@1x.png
+**/ios/Runner/Assets.xcassets/AppIcon.appiconset/Icon-App-29x29@3x.png
+**/ios/Runner/Assets.xcassets/AppIcon.appiconset/Icon-App-29x29@2x.png
+**/ios/Runner/Assets.xcassets/AppIcon.appiconset/Icon-App-29x29@1x.png
+**/ios/Runner/Assets.xcassets/AppIcon.appiconset/Icon-App-20x20@3x.png
+**/ios/Runner/Assets.xcassets/AppIcon.appiconset/Icon-App-20x20@2x.png
+**/ios/Runner/Assets.xcassets/AppIcon.appiconset/Icon-App-20x20@1x.png
+**/ios/Runner/Assets.xcassets/AppIcon.appiconset/Icon-App-1024x1024@1x.png
+**/android/app/src/main/res/mipmap-xxxhdpi/ic_launcher.png
+**/android/app/src/main/res/mipmap-xxhdpi/ic_launcher.png
+**/android/app/src/main/res/mipmap-xhdpi/ic_launcher.png
+**/android/app/src/main/res/mipmap-mdpi/ic_launcher.png
+**/android/app/src/main/res/mipmap-hdpi/ic_launcher.png
+**/android/app/src/main/res/mipmap-anydpi-v26/ic_launcher.xml
+**/android/app/src/main/res/drawable-xxxhdpi/ic_launcher_foreground.png
+**/android/app/src/main/res/drawable-xxxhdpi/ic_launcher_background.png
+**/android/app/src/main/res/drawable-xxhdpi/ic_launcher_foreground.png
+**/android/app/src/main/res/drawable-xxhdpi/ic_launcher_background.png
+**/android/app/src/main/res/drawable-xhdpi/ic_launcher_foreground.png
+**/android/app/src/main/res/drawable-xhdpi/ic_launcher_background.png
+**/android/app/src/main/res/drawable-mdpi/ic_launcher_foreground.png
+**/android/app/src/main/res/drawable-mdpi/ic_launcher_background.png
+**/android/app/src/main/res/drawable-hdpi/ic_launcher_foreground.png
+**/android/app/src/main/res/drawable-hdpi/ic_launcher_background.png
+
 # Exceptions to above rules.
 !**/ios/**/default.mode1v3
 !**/ios/**/default.mode2v3
 !**/ios/**/default.pbxuser
 !**/ios/**/default.perspectivev3
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
+
