--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   crypto: ^2.0.6
   cupertino_icons: ^0.1.2
   firebase_auth: 0.7.0
+  firebase_analytics: 1.1.0
   flare_flutter: ^1.2.3
   flutter_icons: ^0.1.3
   flutter_launcher_icons: ^0.7.0
