--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   audioplayers: ^0.10.0
+  charts_flutter: ^0.6.0
   cloud_firestore: 0.8.2+3
   cloud_functions: 0.0.5
   crypto: ^2.0.6
