--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_icons: ^0.1.3
   flutter_launcher_icons: ^0.7.0
   google_sign_in: 3.2.4
+  intl: ^0.15.8
   provider: ^1.6.1
   http: ^0.12.0+1
   meta: ^1.1.6
