Implement MaintenanceCheckNavigator and MaintenanceScreen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ flutter:
     - assets/default_images/user.png
     - assets/flare/done.flr
     - assets/flare/Mountain.flr
+    - assets/images/maintenance.png
 
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
