--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   flare_flutter: ^1.2.3
   flutter_icons: ^0.1.3
   flutter_launcher_icons: ^0.7.0
+  flutter_staggered_grid_view: ^0.2.7
   google_sign_in: 3.2.4
   provider: ^1.6.1
   http: ^0.12.0+1
