--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_icons: ^0.1.3
   flutter_launcher_icons: ^0.7.0
   google_sign_in: 3.2.4
+  intl: ^0.15.8
   provider: ^1.6.1
   http: ^0.12.0+1
   meta: ^1.1.6
@@ -68,6 +69,7 @@ flutter:
     - assets/default_images/user.png
     - assets/flare/done.flr
     - assets/flare/Mountain.flr
+    - assets/images/maintenance.png
 
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
