--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,9 +3,11 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven { url 'https://maven.fabric.io/public' }
     }
 
     dependencies {
+        classpath 'io.fabric.tools:gradle:1.+'
         classpath 'com.android.tools.build:gradle:3.2.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.gms:google-services:3.2.1'
