--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,7 +70,9 @@ flutter:
     - assets/default_images/user.png
     - assets/flare/done.flr
     - assets/flare/Mountain.flr
+    - assets/images/app-store.png
     - assets/images/maintenance.png
+    - assets/images/play-store.png
 
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
