--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_crashlytics: ^0.3.0
   flutter_icons: ^0.1.3
   flutter_launcher_icons: ^0.7.0
+  flutter_staggered_grid_view: ^0.2.7
   google_sign_in: ^4.0.1+3
   intl: ^0.15.8
   provider: ^1.6.1
