--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,7 @@ flutter:
     - assets/images/app-store.png
     - assets/images/maintenance.png
     - assets/images/play-store.png
+    - assets/images/saraka.png
 
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
