--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -51,6 +51,10 @@ android {
         versionName flutterVersionName
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
+
+        ndk {
+            abiFilters "armeabi-v7a"
+        }
     }
 
     signingConfigs {
