--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,11 +71,10 @@ flutter:
   assets:
     - assets/default_images/user.png
     - assets/flare/done.flr
-    - assets/flare/Mountain.flr
     - assets/images/app-store.png
-    - assets/images/maintenance.png
+    - assets/images/development.png
+    - assets/images/parrot.png
     - assets/images/play-store.png
-    - assets/images/saraka.png
 
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
