--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,7 @@ flutter:
     - assets/images/app-store.png
     - assets/images/development.png
     - assets/images/parrot.png
+    - assets/images/parrot-portrait.png
     - assets/images/play-store.png
 
   # To add custom fonts to your application, add a fonts section here,
