--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,11 @@ flutter:
     - assets/flare/done.flr
     - assets/images/app-store.png
     - assets/images/development.png
+    - assets/images/introduction1.png
+    - assets/images/introduction2.png
+    - assets/images/introduction3.png
+    - assets/images/introduction4.png
+    - assets/images/introduction5.png
     - assets/images/parrot.png
     - assets/images/parrot-portrait.png
     - assets/images/play-store.png
