--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,6 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   audioplayers: ^0.10.0
-  carousel_slider: ^1.3.0
   charts_flutter: ^0.6.0
   cloud_firestore: ^0.9.13+1
   cloud_functions: ^0.1.2+1
@@ -73,6 +72,11 @@ flutter:
     - assets/flare/done.flr
     - assets/images/app-store.png
     - assets/images/development.png
+    - assets/images/introduction1.png
+    - assets/images/introduction2.png
+    - assets/images/introduction3.png
+    - assets/images/introduction4.png
+    - assets/images/introduction5.png
     - assets/images/parrot.png
     - assets/images/parrot-portrait.png
     - assets/images/play-store.png
