--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   path_provider: ^0.5.0+1
   rxdart: ^0.21.0
   scoped_model: ^1.0.1
+  url_launcher: ^5.0.2
   wave: ^0.0.8
 
 dev_dependencies:
