--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,14 +24,14 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   audioplayers: ^0.10.0
   charts_flutter: ^0.6.0
-  cloud_firestore: ^0.9.13+1
-  cloud_functions: ^0.1.2+1
+  cloud_firestore: ^0.11.0+1
+  cloud_functions: ^0.3.0
   crypto: ^2.0.6
   cupertino_icons: ^0.1.2
-  firebase_auth: ^0.8.4+2
-  firebase_analytics: ^2.1.1
+  firebase_auth: ^0.11.0
+  firebase_analytics: ^3.0.1
   flare_flutter: ^1.2.3
-  flutter_crashlytics: ^0.3.0
+  flutter_crashlytics: ^1.0.0
   flutter_icons: ^0.1.3
   flutter_launcher_icons: ^0.7.0
   flutter_staggered_grid_view: ^0.2.7
