--- a/.gitignore
+++ b/.gitignore
@@ -35,8 +35,7 @@
 **/android/gradlew.bat
 **/android/local.properties
 **/android/**/GeneratedPluginRegistrant.java
-**/android/**/key.properties
-**/android/app/google-services.json
+**/android/app/release.gradle
 
 # iOS/XCode related
 **/ios/**/*.mode1v3
@@ -103,4 +102,3 @@
 !**/ios/**/default.pbxuser
 !**/ios/**/default.perspectivev3
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
-
