--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,29 +22,24 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  audioplayers: ^0.10.0
-  charts_flutter: ^0.6.0
-  cloud_firestore: ^0.11.0+1
-  cloud_functions: ^0.3.0
-  crypto: ^2.0.6
   cupertino_icons: ^0.1.2
-  firebase_auth: ^0.11.0
-  firebase_analytics: ^3.0.1
-  flare_flutter: ^1.2.3
-  flutter_crashlytics: ^1.0.0
-  flutter_icons: ^0.1.3
-  flutter_launcher_icons: ^0.7.0
-  flutter_staggered_grid_view: ^0.2.7
-  google_sign_in: ^4.0.1+3
+
+  audioplayers: ^0.13.0
+  charts_flutter: ^0.6.0
+  cloud_firestore: ^0.12.5+2
+  cloud_functions: ^0.4.0+2
+  firebase_auth: ^0.11.1+7
+  firebase_analytics: ^3.0.3
+  flare_flutter: ^1.5.2
+  flutter_icons: ^0.1.4
+  flutter_launcher_icons: ^0.7.2
+  google_sign_in: ^4.0.2
   intl: ^0.15.8
-  provider: ^1.6.1
-  http: ^0.12.0+1
+  provider: ^3.0.0+1
   meta: ^1.1.6
-  path: ^1.6.2
-  path_provider: ^0.5.0+1
-  rxdart: ^0.21.0
-  scoped_model: ^1.0.1
-  url_launcher: ^5.0.2
+  path_provider: ^1.1.0
+  rxdart: ^0.22.0
+  url_launcher: ^5.0.3
   wave: ^0.0.8
 
 dev_dependencies:
@@ -65,9 +60,9 @@ flutter:
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.io/assets-and-images/#resolution-aware.
+  # https://flutter.dev/assets-and-images/#resolution-aware.
   # For details regarding adding assets from package dependencies, see
-  # https://flutter.io/assets-and-images/#from-packages
+  # https://flutter.dev/assets-and-images/#from-packages
   assets:
     - assets/default_images/user.png
     - assets/flare/done.flr
@@ -100,7 +95,7 @@ flutter:
   #         weight: 700
   #
   # For details regarding fonts from package dependencies,
-  # see https://flutter.io/custom-fonts/#from-packages
+  # see https://flutter.dev/custom-fonts/#from-packages
   fonts:
     - family: Rubik
       fonts:
