--- a/android/app/debug.gradle
+++ b/android/app/debug.gradle
@@ -1,8 +1,14 @@
 signingConfigs {
     debug {
-        storeFile file('./debug.keystore')
+        storeFile file('../debug.keystore')
         storePassword 'android'
         keyAlias 'androiddebugkey'
         keyPassword 'android'
+    }
+}
+
+buildTypes {
+    debug {
+        signingConfig signingConfigs.debug
     }
 }
