--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -22,59 +22,53 @@ if (flutterVersionName == null) {
 }
 
 apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
-def keystoreProperties = new Properties()
-def keystorePropertiesFile = rootProject.file('key.properties')
-if (keystorePropertiesFile.exists()) {
-    keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+apply from: rootProject.file('./app/debug.gradle'), to: android
+
+if (rootProject.file('./app/release.gradle').exists()) {
+    apply from: rootProject.file('./app/release.gradle'), to: android
 }
 
 android {
     compileSdkVersion 28
 
-    sourceSets {
-        main.java.srcDirs += 'src/main/kotlin'
-    }
-
     lintOptions {
         disable 'InvalidPackage'
     }
 
+    buildTypes {
+        release {
+            debuggable false
+        }
+
+        debug {
+        }
+    }
+
+    flavorDimensions "backend"
+
+    productFlavors {
+        production {
+            dimension "backend"
+            applicationIdSuffix ""
+            versionNameSuffix ""
+        }
+
+        development {
+            dimension "backend"
+            applicationIdSuffix ".development"
+            versionNameSuffix "-development"
+        }
+    }
+
     defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "app.axross.saraka"
         minSdkVersion 26
         targetSdkVersion 28
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        multiDexEnabled true
-    }
-
-    signingConfigs {
-        release {
-            keyAlias keystoreProperties['keyAlias']
-            keyPassword keystoreProperties['keyPassword']
-            storeFile file(keystoreProperties['storeFile'])
-            storePassword keystoreProperties['storePassword']
-        }
-    }
-
-    buildTypes {
-        release {
-            ndk {
-                abiFilters "armeabi-v7a"
-            }
-
-            signingConfig signingConfigs.release
-
-            minifyEnabled true
-            useProguard true
-
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
     }
 }
 
@@ -83,12 +77,10 @@ flutter {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'com.google.firebase:firebase-core:17.0.0'
     testImplementation 'junit:junit:4.12'
-    implementation 'androidx.multidex:multidex:2.0.0'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 }
 
-apply plugin: 'io.fabric'
 apply plugin: 'com.google.gms.google-services'
