--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,6 +76,10 @@ flutter:
     - assets/images/parrot.png
     - assets/images/parrot-portrait.png
     - assets/images/play-store.png
+    - assets/images/hourglass.png
+    - assets/images/hourglass-finished.png
+    - assets/images/score-board.png
+    - assets/images/card-writing.png
 
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
