--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   provider: ^3.0.0+1
   meta: ^1.1.6
   path_provider: ^1.1.0
+  tuple: ^1.0.2
   rxdart: ^0.22.0
   url_launcher: ^5.0.3
   wave: ^0.0.8
